# La-Lango

./: README.md  ROADMAP.md  pyproject.toml
backend/: requirements-dev.txt
backend/lalango/api/: routes.py
backend/lalango/data/: dataset.py  splitter.py
backend/lalango/models/: attention.py  seq2seq_lstm.py  transformer.py
backend/scripts/: evaluate.py  preprocess.py  train.py
backend/tests/: test_evaluation.py  test_seq2seq_lstm.py
languages/english-kiswahili/: config.json
languages/kiswahili-english/: README.md
