[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "la-lango-ai"
version = "0.1.0"
description = "A community-driven NLP platform for translating low-resource languages and regional dialects"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"

authors = [
    { name = "Wecncode Community", email = "hello@wecncode.org" }
]

keywords = [
    "nlp",
    "machine-translation",
    "low-resource-languages",
    "seq2seq",
    "transformer",
    "open-source",
]

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
    "pydantic>=2.7.1",
    "numpy>=1.26.4",
    "tqdm>=4.66.4",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
# Install with: pip install -e ".[torch]"
torch = ["torch>=2.3.0"]

# Install with: pip install -e ".[dev]"
dev = [
    "pytest>=8.2.2",
    "flake8>=7.0.0",
    "jupyter>=1.0.0",
]

# Install everything: pip install -e ".[torch,dev]"
all = ["la-lango-ai[torch,dev]"]

[project.urls]
Homepage     = "https://github.com/Wecncode/La-Lango"
Repository   = "https://github.com/Wecncode/La-Lango"
Issues       = "https://github.com/Wecncode/La-Lango/issues"
Discussions  = "https://github.com/Wecncode/La-Lango/discussions"

[tool.setuptools.packages.find]
where = ["backend"]
include = ["lalango*"]

# ---------------------------------------------------------------------------
# flake8 configuration
# ---------------------------------------------------------------------------
[tool.flake8]
max-line-length = 100
# Ignore:
#   E501 — line too long (handled by max-line-length above)
#   W503 — line break before binary operator (conflicts with Black)
extend-ignore = ["E501", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "venv",
    "env",
    ".venv",
    "experiments/",
]

# ---------------------------------------------------------------------------
# pytest configuration
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
# Show short test summary info for all failures
addopts = "-v --tb=short"
